#412 - design improvements: Fixed not all menu items visible/scrollable (about, logout)

--- a/src/main/resources/static/css/dark/style.css
+++ b/src/main/resources/static/css/dark/style.css
@@ -116,6 +116,11 @@ main {
     width: 350px;
 }
 
+ul.sidenav.sidenav-fixed > li:last-child
+{
+    margin-bottom: 160px;
+}
+
 .sidenav, .sidenav-sub, .searchWrapper {
     background-color: #444444;
     box-shadow: none;
